# stm32l4-test

./: .gitignore  Cargo.toml  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
