[package]
name = "stm32l4-test"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[dependencies.stm32l4]
version = "0.8.0"
features = ["stm32l4x6", "rt"]